--- a/templates/home.html
+++ b/templates/home.html
@@ -7,58 +7,77 @@
     <link href="/static/style.css" rel="stylesheet">
 </head>
 
-<body>
-    <main class="container w-full max-w-md mx-auto px-4 text-center">
-        <h1 class="text-6xl font-bold py-12">
-            Better TISS Calendar
-        </h1>
-        <div class="h-52 flex flex-row justify-around mb-8">
-            <div class="w-[10rem] h-full border border-[color:#333] rounded-2xl text-start p-3">
-                <div class="text-lg font-bold">183.579 VU Technische Grundlagen der Informatik</div>
-                <div>AudiMax</div>
-                <div>Vorlesung</div>
-            </div>
-            <span class="my-auto text-5xl">-></span>
-            <div class="w-[10rem] h-full border border-[color:#333] rounded-2xl text-start p-3">
-                <div class="text-lg font-bold">TGI VU</div>
-                <div>AudiMax</div>
-                <div>Vorlesung</div>
-            </div>
-        </div>
-
-        <!--Original URL-->
-        <div class="w-full text-start">
-            <div class="w-full">
-                <label for="original_url" class="block mb-2 text-sm font-medium">
-                    Original calendar url (from
-                    <a href="https://tiss.tuwien.ac.at/events/personSchedule.xhtml">here</a>):
-                </label>
-                <div class="w-full flex flex-row space-x-3">
-                    <input type="text" id="original_url"
-                        class="bg-neutral-950 border border-[color:#333] rounded-lg focus:outline-none focus:border-white focus:ring-white  w-full p-2.5"
-                        placeholder="https://tiss.tuwien.ac.at/even..." required>
-                    <button
-                        class="bg-neutral-950 border border-[color:#333] rounded-lg px-3 hover:bg-white hover:text-black hover:transition-all">Verify</button>
+<body class="h-screen">
+    <div class="h-full flex flex-col justify-between">
+        <main class="container w-full max-w-md mx-auto px-4 text-center">
+            <h1 class="text-6xl font-bold py-12">
+                Better TISS Calendar
+            </h1>
+            <div class="h-52 flex flex-row justify-around mb-8">
+                <div class="w-[10rem] h-full border border-[color:#333] rounded-2xl text-start p-3">
+                    <div class="text-lg font-bold">183.579 VU Technische Grundlagen der Informatik</div>
+                    <div>AudiMax</div>
+                    <div>Vorlesung</div>
+                </div>
+                <span class="my-auto text-5xl">-></span>
+                <div class="w-[10rem] h-full border border-[color:#333] rounded-2xl text-start p-3">
+                    <div class="text-lg font-bold">TGI VU</div>
+                    <div>AudiMax</div>
+                    <div>Vorlesung</div>
                 </div>
             </div>
-        </div>
 
-        <!--Original URL-->
-        <div class="w-full text-start mt-8">
-            <div class="w-full">
-                <label for="original_url" class="block mb-2 text-sm font-medium">
-                    Better calendar url:
-                </label>
-                <div class="w-full flex flex-row space-x-3">
-                    <div id="original_url" class="bg-neutral-950 border border-[color:#333] rounded-lg w-full p-2.5">
-                        Ohn no
+            <!--Original URL-->
+            <div class="w-full text-start">
+                <div class="w-full">
+                    <label for="original_url" class="block mb-2 font-medium">
+                        Original calendar url (from
+                        <a href="https://tiss.tuwien.ac.at/events/personSchedule.xhtml">here</a>):
+                    </label>
+                    <div class="w-full flex flex-row space-x-3">
+                        <input type="text" id="original_url"
+                            class="bg-neutral-950 border border-[color:#333] rounded-lg focus:outline-none focus:border-white focus:ring-white  w-full p-2.5"
+                            placeholder="https://tiss.tuwien.ac.at/even..." required>
+                        <button id="verify"
+                            class="bg-neutral-950 border border-[color:#333] rounded-lg px-3 hover:bg-white hover:text-black hover:transition-all">Verify</button>
                     </div>
-                    <button
-                        class="bg-neutral-950 border border-[color:#333] rounded-lg px-3 hover:bg-white hover:text-black hover:transition-all">Copy</button>
+                    <div id="error_message" class="p-2 text-red-300 hidden">🔥???</div>
                 </div>
             </div>
-        </div>
-    </main>
+
+            <!--Better URL-->
+            <div class="w-full text-start mt-8">
+                <div class="w-full">
+                    <label for="new_url" class="block mb-2 font-medium">
+                        Better calendar url:
+                    </label>
+                    <div>
+                        <div class="w-full flex flex-row space-x-3">
+                            <div id="new_url"
+                                class="flex-1 overflow-hidden bg-neutral-950 border border-[color:#333] rounded-lg p-2.5">
+                                <div id="better_url_placeholder" class="text-neutral-600 italic">enter tiss url above
+                                </div>
+                                <div id="better_url" class="w-full whitespace-nowrap overflow-clip hidden"></div>
+                            </div>
+                            <button id="copy"
+                                class="bg-neutral-950 border border-[color:#333] rounded-lg px-3 enabled:hover:bg-white enabled:hover:text-black hover:transition-all disabled:text-neutral-600"
+                                disabled>Copy</button>
+                        </div>
+                    </div>
+                </div>
+        </main>
+        <footer class="bg-neutral-900 border-t-2 border-t-[color:#333] p-4 text-sm text-neutral-400">
+            <div class="container w-full max-w-md mx-auto">
+                <div class="flex flex-row justify-between">
+                    <div>Made with ❤️ by flofriday</div>
+                    <div>
+                        Hosted on <a href="https://github.com/flofriday/better-tiss-calendar">GitHub</a>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </div>
+    <script src="static/home.js"></script>
 </body>
 
 </html>
