Implement first version of the backend
This just improves the subject of each event. The current implementation
has some room for improvement. Anyway, I am quite happy that it works
at all, so I will deploy it soon.

--- a/templates/home.html
+++ b/templates/home.html
@@ -67,7 +67,7 @@
                 </div>
         </main>
         <footer class="bg-neutral-900 border-t-2 border-t-[color:#333] p-4 text-sm text-neutral-400">
-            <div class="container w-full max-w-md mx-auto">
+            <div class="container w-full max-w-lg mx-auto">
                 <div class="flex flex-row justify-between">
                     <div>Made with ❤️ by flofriday</div>
                     <div>
