Add beta warning

--- a/templates/home.html
+++ b/templates/home.html
@@ -12,6 +12,7 @@
         <main class="container w-full max-w-md mx-auto px-4 text-center">
             <h1 class="text-6xl font-bold py-12">
                 Better TISS Calendar
+                <div class="mx-auto mt-2 text-xs w-min bg-red-700 rounded-xl p-2">BETA</div>
             </h1>
             <div class="h-52 flex flex-row justify-around mb-8">
                 <div class="w-[10rem] h-full border border-[color:#333] rounded-2xl text-start p-3">
