Add list of lecture shorthands
The list is not perfekt but it is the best we have right now.
However, it should be quite easy to parse and read.

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,10 +10,14 @@
 <body class="h-screen">
     <div class="h-full flex flex-col justify-between">
         <main class="container w-full max-w-md mx-auto px-4 text-center">
-            <h1 class="text-6xl font-bold py-12">
+            <h1 class="text-6xl font-bold pt-12 pb-6">
                 Better TISS Calendar
-                <div class="mx-auto mt-2 text-xs w-min bg-red-700 rounded-xl p-2">BETA</div>
+                <div class="mx-auto mt-2 text-xs font-bold w-min bg-pink-700 rounded-full px-2 py-1">BETA</div>
             </h1>
+            <div class="pb-8">
+                We can't fix the room reservation problem, but there is still a
+                lot to improve.
+            </div>
             <div class="h-52 flex flex-row justify-around mb-8">
                 <div class="w-[10rem] h-full border border-[color:#333] rounded-2xl text-start p-3">
                     <div class="text-lg font-bold">183.579 VU Technische Grundlagen der Informatik</div>
@@ -70,7 +74,7 @@
         <footer class="bg-neutral-900 border-t-2 border-t-[color:#333] p-4 text-sm text-neutral-400">
             <div class="container w-full max-w-lg mx-auto">
                 <div class="flex flex-row justify-between">
-                    <div>Made with ❤️ by flofriday</div>
+                    <div>Made with ❤️ by <a href="https://github.com/flofriday">flofriday</a></div>
                     <div>
                         Hosted on <a href="https://github.com/flofriday/better-tiss-calendar">GitHub</a>
                     </div>
