--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="/static/logo.png">
     <link href="/static/style.css" rel="stylesheet">
 </head>
 
