--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,7 @@
                     <div>AudiMax</div>
                     <div>Vorlesung</div>
                 </div>
-                <span class="my-auto text-5xl">-></span>
+                <span class="my-auto text-5xl px-2 whitespace-nowrap">→</span>
                 <div class="w-[10rem] h-full border border-[color:#333] rounded-2xl text-start p-3">
                     <div class="text-lg font-bold">TGI VU</div>
                     <div>AudiMax</div>
@@ -72,12 +72,12 @@
                     </div>
                 </div>
         </main>
-        <footer class="bg-neutral-900 border-t-2 border-t-[color:#333] p-4 text-sm text-neutral-400">
+        <footer class="bg-neutral-900 border-t-2 border-t-[color:#333] p-4 text-sm text-neutral-400 mt-8">
             <div class="container w-full max-w-lg mx-auto">
                 <div class="flex flex-row justify-between">
                     <div>Made with ❤️ by <a href="https://github.com/flofriday">flofriday</a></div>
                     <div>
-                        Hosted on <a href="https://github.com/flofriday/better-tiss-calendar">GitHub</a>
+                        available on <a href="https://github.com/flofriday/better-tiss-calendar">GitHub</a>
                     </div>
                 </div>
             </div>
