Implement the copy button
The copy button does copy now to the clipboard but the feedback is
not ideal.

--- a/templates/home.html
+++ b/templates/home.html
@@ -15,11 +15,11 @@
                 Better TISS Calendar
                 <div class="mx-auto mt-2 text-xs font-bold w-min bg-pink-700 rounded-full px-2 py-1">BETA</div>
             </h1>
-            <div class="pb-8">
+            <div class="pb-10">
                 We can't fix the room reservation problem, but there is still a
                 lot to improve.
             </div>
-            <div class="h-52 flex flex-row justify-around mb-8">
+            <div class="h-52 flex flex-row justify-around mb-12">
                 <div class="w-[10rem] h-full border border-[color:#333] rounded-2xl text-start p-3">
                     <div class="text-lg font-bold">183.579 VU Technische Grundlagen der Informatik</div>
                     <div>AudiMax</div>
@@ -47,12 +47,12 @@
                         <button id="verify"
                             class="bg-neutral-950 border border-[color:#333] rounded-lg px-3 hover:bg-white hover:text-black hover:transition-all">Verify</button>
                     </div>
-                    <div id="error_message" class="p-2 text-red-300 hidden">🔥???</div>
+                    <div id="error_message" class="p-2 text-red-300 invisible">🔥???</div>
                 </div>
             </div>
 
             <!--Better URL-->
-            <div class="w-full text-start mt-8">
+            <div class="w-full text-start mt-2">
                 <div class="w-full">
                     <label for="new_url" class="block mb-2 font-medium">
                         Better calendar url:
@@ -72,7 +72,7 @@
                     </div>
                 </div>
         </main>
-        <footer class="bg-neutral-900 border-t-2 border-t-[color:#333] p-4 text-sm text-neutral-400 mt-8">
+        <footer class="bg-neutral-900 border-t-2 border-t-[color:#333] p-4 text-sm text-neutral-400 mt-16">
             <div class="container w-full max-w-lg mx-auto">
                 <div class="flex flex-row justify-between">
                     <div>Made with ❤️ by <a href="https://github.com/flofriday">flofriday</a></div>
