Add copy button feedback

--- a/templates/home.html
+++ b/templates/home.html
@@ -54,9 +54,13 @@
             <!--Better URL-->
             <div class="w-full text-start mt-2">
                 <div class="w-full">
-                    <label for="new_url" class="block mb-2 font-medium">
-                        Better calendar url:
-                    </label>
+                    <div class="flex flex-row justify-between">
+                        <label for="new_url" class="block mb-2 font-medium">
+                            Better calendar url:
+                        </label>
+                        <div id="copy_feedback" class="text-teal-300 font-bold text-end text-sm opacity-0 pr-2">Copied!
+                        </div>
+                    </div>
                     <div>
                         <div class="w-full flex flex-row space-x-3">
                             <div id="new_url"
