Move ressources to their own file

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="/static/logo.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
     <link href="/static/style.css" rel="stylesheet">
 </head>
 
@@ -15,7 +19,7 @@
                 Better TISS Calendar
                 <div class="mx-auto mt-2 text-xs font-bold w-min bg-pink-700 rounded-full px-2 py-1">BETA</div>
             </h1>
-            <div class="pb-10">
+            <div class="pb-10 text-neutral-400">
                 We can't fix the room reservation problem, but there is still a
                 lot to improve.
             </div>
@@ -25,7 +29,7 @@
                     <div>AudiMax</div>
                     <div>Vorlesung</div>
                 </div>
-                <span class="my-auto text-5xl px-2 whitespace-nowrap">→</span>
+                <span class="my-auto text-5xl px-2 whitespace-nowrap">➔</span>
                 <div class="w-[10rem] h-full border border-[color:#333] rounded-2xl text-start p-3">
                     <div class="text-lg font-bold">TGI VU</div>
                     <div>AudiMax</div>
