Copy feedback is no longer highlight-able

--- a/templates/home.html
+++ b/templates/home.html
@@ -62,7 +62,8 @@
                         <label for="new_url" class="block mb-2 font-medium">
                             Better calendar url:
                         </label>
-                        <div id="copy_feedback" class="text-teal-300 font-bold text-end text-sm opacity-0 pr-2">Copied!
+                        <div id="copy_feedback"
+                            class="text-teal-300 font-bold text-end text-sm opacity-0 pr-2 select-none">Copied!
                         </div>
                     </div>
                     <div>
