--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
+
+    <title>Better TISS Calendar</title>
+    <meta property="og:title" content="Better TISS Calendar" />
+    <meta property="og:image" content="https://bettercal.flofriday.dev/static/social.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="/static/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
