Add google calendar option
Most of the backend work was already done this is mostly showing the
option in the frontend.

--- a/templates/home.html
+++ b/templates/home.html
@@ -67,6 +67,18 @@
                 </div>
             </div>
 
+            <div class="w-full text-start pb-8">
+                <div class="font-medium">
+                    Options:
+                </div>
+
+                <input type="checkbox" name="Hey there" id="is_google">
+                <label for="is_google" class="text-neutral-400">for Google Calendar</label>
+                <!-- <br>
+                <input type="checkbox" name="Hey there" id="shorthand" checked>
+                <label for="shorthand" class="text-neutral-400">use shorthands</label> -->
+            </div>
+
             <!--Better URL-->
             <div class="w-full text-start mt-2">
                 <div class="w-full">
@@ -84,7 +96,8 @@
                                 class="flex-1 overflow-hidden bg-neutral-950 border border-[color:#333] rounded-lg p-2.5">
                                 <div id="better_url_placeholder" class="text-neutral-600 italic">enter tiss url above
                                 </div>
-                                <div id="better_url" class="w-full whitespace-nowrap overflow-clip hidden"></div>
+                                <div id="better_url"
+                                    class="w-full whitespace-nowrap overflow-y-scroll no-scrollbar hidden"></div>
                             </div>
 
 
