Add gradients to the example of the event

--- a/templates/home.html
+++ b/templates/home.html
@@ -31,20 +31,22 @@
                 lot to improve.
             </div>
             <div class="flex flex-row justify-around mb-12">
-                <div class="w-[12rem] h-full border border-[color:#333] rounded-2xl text-start p-3">
+                <div class="my-auto w-[12rem] h-full border border-[color:#666] rounded-2xl text-start p-3">
                     <div class="text-lg font-bold">183.579 VU Technische Grundlagen der Informatik</div>
                     <div class="my-1 text-sm">GM 1 Audi. Max.- ARCH-INF</div>
                     <div class="my-1 text-sm">Vorlesung</div>
                 </div>
                 <span class="my-auto text-5xl px-2 whitespace-nowrap">➔</span>
-                <div class="w-[12rem] h-full border border-[color:#333] rounded-2xl text-start p-3">
-                    <div class="text-lg font-bold">TGI VU</div>
-                    <div class="my-1 text-sm">Getreidemarkt 9</div>
-                    <div class="my-1 text-sm">
-                        Technische Grundlagen der Informatik <br>
-                        Room: <span class="text-blue-400">GM 1 Audi. Max.- ARCH-INF</span><br>
-                        <br>
-                        Vorlesung
+                <div class="w-[12rem] h-full rounded-2xl p-[1px] bg-gradient-to-r from-pink-500 to-yellow-500">
+                    <div class="w-full h-full bg-black rounded-2xl text-start p-3">
+                        <div class="text-lg font-bold">TGI VU</div>
+                        <div class="my-1 text-sm">Getreidemarkt 9</div>
+                        <div class="my-1 text-sm">
+                            Technische Grundlagen der Informatik <br>
+                            Room: <span class="text-blue-400">GM 1 Audi. Max.- ARCH-INF</span><br>
+                            <br>
+                            Vorlesung
+                        </div>
                     </div>
                 </div>
             </div>
