Improve example information

--- a/templates/home.html
+++ b/templates/home.html
@@ -42,8 +42,9 @@
                         <div class="text-lg font-bold">TGI VU</div>
                         <div class="my-1 text-sm">Getreidemarkt 9</div>
                         <div class="my-1 text-sm">
-                            Technische Grundlagen der Informatik <br>
+                            <strong>Technische Grundlagen der Informatik</strong><br>
                             Room: <span class="text-blue-400">GM 1 Audi. Max.- ARCH-INF</span><br>
+                            Floor: Erdgeschoss<br>
                             <br>
                             Vorlesung
                         </div>
