--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,10 @@
     <meta property="og:image:height" content="630" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="/static/logo.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/logo32.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="/static/logo48.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/static/logo192.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/static/logo180.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
