--- a/templates/home.html
+++ b/templates/home.html
@@ -29,9 +29,10 @@
             <h1 class="text-6xl font-bold pt-12 pb-6 leading-snug">
                 Better TISS Calendar
             </h1>
-            <div class="pb-10 text-neutral-400">
+            <div class="pb-8 text-neutral-400">
                 We can't fix the room reservation problem, but there is still a
                 lot to improve.
+                Trusted by {{statistic.monthly_users}} students.
             </div>
             <div class="flex flex-row justify-around mb-12">
                 <div class="my-auto w-[12rem] h-full border border-[color:#666] rounded-2xl text-start p-3">
