Improve wording on the website

--- a/templates/home.html
+++ b/templates/home.html
@@ -32,7 +32,7 @@
             <div class="pb-8 text-neutral-400">
                 We can't fix the room reservation problem, but there is still a
                 lot to improve.
-                Trusted by {{statistic.monthly_users}} students.
+                Used by {{statistic.monthly_users}} students.
             </div>
             <div class="flex flex-row justify-around mb-12">
                 <div class="my-auto w-[12rem] h-full border border-[color:#666] rounded-2xl text-start p-3">
@@ -61,8 +61,8 @@
                 <div class="w-full">
                     <label for="original_url" class="block mb-2">
                         <h2 class="font-medium">
-                            Original calendar url (bottom from this
-                            <a href="https://tiss.tuwien.ac.at/events/personSchedule.xhtml">TISS page</a>):
+                            Original calendar url (at bottom from
+                            <a href="https://tiss.tuwien.ac.at/events/personSchedule.xhtml">here</a>):
                         </h2>
                     </label>
                     <div class="w-full flex flex-row space-x-3">
