--- a/templates/home.html
+++ b/templates/home.html
@@ -61,8 +61,9 @@
                 <div class="w-full">
                     <label for="original_url" class="block mb-2">
                         <h2 class="font-medium">
-                            Original calendar url (at bottom from
-                            <a href="https://tiss.tuwien.ac.at/events/personSchedule.xhtml">here</a>):
+                            Original calendar url (from
+                            <a href="https://tiss.tuwien.ac.at/events/personSchedule.xhtml" target="_blank"
+                                rel="noopener noreferrer">here</a>):
                         </h2>
                     </label>
                     <div class="w-full flex flex-row space-x-3">
