--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -25,34 +25,38 @@
 
 <body class="h-screen">
     <div class="h-full flex flex-col justify-between">
-        <main class="container w-full max-w-md mx-auto px-4 text-center">
+        <main class="container w-full max-w-[30rem] mx-auto px-4 text-center">
             <h1 class="text-6xl font-bold pt-12 pb-6 leading-snug">
                 Better TISS Calendar
             </h1>
-            <div class="pb-8 text-neutral-400">
-                We can't fix the room reservation problem, but there is still a
-                lot to improve.
-                Used by {{statistic.monthly_users}} students.
-            </div>
             <div class="flex flex-row justify-around mb-12">
                 <div class="my-auto w-[12rem] h-full border border-[color:#666] rounded-2xl text-start p-3">
                     <div lang="de" class="text-lg font-bold">183.579 VU Technische Grundlagen der
                         Informatik</div>
-                    <div lang="de" class="my-1 text-sm">GM 1 Audi. Max.- ARCH-INF</div>
-                    <div lang="de" class="my-1 text-sm">Vorlesung</div>
+                    <div lang="de" class="my-2 text-sm">GM 1 Audi. Max.- ARCH-INF</div>
+                    <div lang="de" class="my-1 text-xs">Vorlesung</div>
                 </div>
                 <span aria-hidden="true" class="my-auto text-5xl px-2 whitespace-nowrap">➔</span>
                 <div class="w-[12rem] h-full rounded-2xl p-[1px] bg-gradient-to-r from-pink-500 to-yellow-500">
                     <div class="w-full h-full bg-black rounded-2xl text-start p-3">
                         <div lang="de" id="preview-title" class="text-lg font-bold">TGI VU</div>
-                        <div lang="de" class="my-1 text-sm">Getreidemarkt 9</div>
+                        <div lang="de" class="my-2 text-sm">Getreidemarkt 9</div>
                         <div class="my-1 text-sm">
-                            <div id="preview-lecturename">
+                            <div id="preview-lecturename" class="mb-1">
                                 <strong lang="de">Technische Grundlagen der
-                                    Informatik</strong><br>
+                                    Informatik</strong>
                             </div>
-                            Room: <span lang="de" class="text-blue-400">GM 1 Audi. Max.- ARCH-INF</span><br>
-                            Floor: <span lang="de"> Erdgeschoss</span><br>
+                            <div class="mb-1">
+                                Details: <span lang="de" class="text-blue-400">TISS</span>, <span lang="de"
+                                    class="text-blue-400">TUW-Maps</span>
+                            </div>
+                            <div class="mb-1">
+                                Room: <span lang="de" class="text-blue-400">GM 1 Audi. Max.-
+                                    ARCH-INF</span>
+                            </div>
+                            <div>
+                                Floor: <span lang="de"> Erdgeschoss</span>
+                            </div>
                             <br>
                             <span lang="de">Vorlesung</span>
                         </div>
