Improve statistics performance by 28 times
We now store less data about each access and only store daily
active users. This enough for the basic monitoring we do for this
service.

It also makes the queying much easer and a lot faster.

--- a/app/templates/statistics.html
+++ b/app/templates/statistics.html
@@ -37,7 +37,7 @@
           <h1 class="text-6xl font-bold pt-12 pb-6 leading-snug">Statistics</h1>
 
           <ul>
-            <li>Daily active users: {{statistic.daily_users}}</li>
+            <li>Today's active users: {{statistic.daily_users}}</li>
             <li>Montly active users: {{statistic.monthly_users}}</li>
             <li>Total users: {{statistic.total_users}}</li>
           </ul>
