Add contact call to action for severe problems.
So about half of the users try the app and don't keep using it
which seams a bit high to me. So maybe I am missing something
big here and that might help resolve it.

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -129,10 +129,15 @@
 
                         </div>
                         <div id="import-tip" class="text-sm mt-3 invisible">
-                            <a
-                                href="https://github.com/flofriday/better-tiss-calendar?tab=readme-ov-file#importing-the-calendar">
-                                How to subscribe the calendar 📅
-                            </a>
+                            <p>
+                                <a
+                                    href="https://github.com/flofriday/better-tiss-calendar?tab=readme-ov-file#importing-the-calendar">
+                                    How to subscribe the calendar 📅
+                                </a>
+                            </p>
+                            <p class="pt-2">
+                                Having problems? <a href="mailto:flohacksfriday@gmail.com?subject=BetterCal%20Problem">Contact the developer</a>
+                            </p>
                         </div>
 
                     </div>
