Improve links in preview and accepting more links

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -29,32 +29,32 @@
             <h1 class="text-6xl font-bold pt-12 pb-6 leading-snug"> Better TISS Calendar </h1>
             <div class="flex flex-row justify-around mb-12">
                 <div class="my-auto w-[12rem] h-full border border-[color:#666] rounded-2xl text-start p-3">
-                    <div lang="de" class="text-lg font-bold">183.579 VU Technische Grundlagen der
-                        Informatik</div>
-                    <div lang="de" class="my-2 text-sm">GM 1 Audi. Max.- ARCH-INF</div>
-                    <div lang="de" class="my-1 text-xs">Vorlesung</div>
+                    <div lang="de" class="text-lg font-bold">185.A91 Einführung in die Programmierung 1</div>
+                    <div lang="de" class="my-2 text-sm">📌 GM 1 Audi. Max.- ARCH-INF</div>
+                    <div lang="de" class="my-1 text-sm">Vorlesung</div>
                 </div>
+
                 <span aria-hidden="true" class="my-auto text-5xl px-2 whitespace-nowrap">➔</span>
+
                 <div
                     class="w-[12rem] w-min-[12rem] h-full rounded-2xl p-[1px] bg-gradient-to-r from-pink-500 to-yellow-500">
                     <div class="w-full h-full bg-black rounded-2xl text-start p-3">
-                        <div lang="de" id="preview-title" class="text-lg font-bold">TGI VU</div>
-                        <div lang="de" class="my-2 text-sm">Getreidemarkt 9</div>
+                        <div lang="de" id="preview-title" class="text-lg font-bold">EP1 VU</div>
+                        <div lang="de" class="my-2 text-sm">📌 Getreidemarkt 9</div>
                         <div class="my-1 text-sm">
                             <div id="preview-lecturename" class="mb-1">
-                                <strong lang="de">Technische Grundlagen der
-                                    Informatik</strong>
+                                <strong lang="de">Einführung in die Programmierung 1</strong>
                             </div>
                             <div class="mb-1">
-                                Details: <span lang="de" class="text-blue-400">Lecture</span>, <span lang="de"
-                                    class="text-blue-400">Room Reservation</span>
+                                Details: <a href="https://tiss.tuwien.ac.at/course/courseDetails.xhtml?dswid=8406&dsrid=953&courseNr=185A91" lang="de" class="text-blue-400">Lecture</a>,
+                                <a href="https://tiss.tuwien.ac.at/events/roomSchedule.xhtml?dswid=4026&dsrid=571&roomCode=AUDI" lang="de" class="text-blue-400">Room Reservation</a>
                             </div>
                             <div class="mb-1">
-                                Room: <span lang="de" class="text-blue-400">GM 1 Audi. Max.-
-                                    ARCH-INF</span>
+                                Room: <a lang="de" class="text-blue-400" href="https://tuw-maps.tuwien.ac.at/?q=BAU178A">1 Audi. Max.-
+                                    ARCH-INF</a>
                             </div>
                             <div>
-                                Floor: <span lang="de"> Erdgeschoss</span>
+                                Floor: <span lang="de">Erdgeschoss</span>
                             </div>
                             <br>
                             <span lang="de">Vorlesung</span>
